2003-09-10  Theppitak Karoonboonyanan <thep@linux.thai.net>

	*** Stop using CVS-generated ChangeLog, as it's hard to read ***

	* include/thai/Makefile.am:
	List the missing thwstr.h.

	* man/man3/Makefile.am:
	Add EXTRA_DIST to include missing man pages.

	* man/template.3, man/man3/*.3:
	Change my e-mail address.

	* tests/test-thcoll.sh:
	Also remove out.txt, to pass 'make distcheck'.

	* TODO:
	Add TODO about normalization rules.

	* NEWS, configure.in:
	Version 0.1.2.

2003-03-23 Sunday 20:26  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* ChangeLog (1.55), src/thctype/wtt.c (1.3): Fix TACio_op_[] data
	for (FV1,NON) and (FV1,LV).

2003-03-23 Sunday 20:23  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* ChangeLog (1.54), include/thai/thcell.h (1.6),
	src/thcell/thcell.c (1.7): Add th_cell_init() function.

2003-02-02 Sunday 15:45  Pattara Kiatisevi <ott@linux.thai.net>

	* debian/: ex.package.doc-base (1.2), files (1.2),
	libthai0.postinst.debhelper (1.2), libthai0.postrm.debhelper (1.2),
	libthai0.substvars (1.2): -some more bullshits

2003-02-02 Sunday 15:44  Pattara Kiatisevi <ott@linux.thai.net>

	* debian/: conffiles.ex (1.2), cron.d.ex (1.2), emacsen-install.ex
	(1.2), emacsen-remove.ex (1.2), emacsen-startup.ex (1.2), init.d.ex
	(1.2), manpage.1.ex (1.2), manpage.sgml.ex (1.2), menu.ex (1.2),
	postinst.ex (1.2), postrm.ex (1.2), preinst.ex (1.2), prerm.ex
	(1.2), shlibs.local.ex (1.2), watch.ex (1.2): -remove these
	bullshits

2003-02-02 Sunday 15:35  Pattara Kiatisevi <ott@linux.thai.net>

	* debian/: README.Debian (1.1), changelog (1.1), conffiles.ex
	(1.1), control (1.1), copyright (1.1), cron.d.ex (1.1), dirs (1.1),
	docs (1.1), emacsen-install.ex (1.1), emacsen-remove.ex (1.1),
	emacsen-startup.ex (1.1), ex.package.doc-base (1.1), files (1.1),
	init.d.ex (1.1), libthai-dev.dirs (1.1), libthai-dev.files (1.1),
	libthai0.dirs (1.1), libthai0.files (1.1),
	libthai0.postinst.debhelper (1.1), libthai0.postrm.debhelper (1.1),