@@ -1,3 +1,8 @@
+2004-01-20  Theppitak Karoonboonyanan <thep@linux.thai.net>
+
+	* include/thai/thrend.h, src/thrend/thrend.c:
+	Use TH_BLANK_BASE_GLYPH as a base for floating upper/lower vowels.
+
 2003-09-10  Theppitak Karoonboonyanan <thep@linux.thai.net>
 
 	*** Stop using CVS-generated ChangeLog, as it's hard to read ***
@@ -688,13 +693,13 @@
 	* Makefile.am (1.2), configure.in (1.2), include/Makefile.am (1.2,
 	r0_1_1, r0_1_0), include/thai/Makefile.am (1.2), src/Makefile.am
 	(1.2), src/thcoll/Makefile.am (1.2, r0_1_1, r0_1_0),
-	tests/Makefile.am (1.2): Add $Id: ChangeLog,v 1.57 2003-09-10 07:13:08 thep Exp $
+	tests/Makefile.am (1.2): Add $Id: ChangeLog,v 1.58 2004-01-24 16:08:17 thep Exp $
 
 2001-06-12 Tuesday 20:14  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* src/thcoll/cweight.c (1.2, r0_1_0), src/thcoll/cweight.h (1.2,
 	r0_1_0), src/thcoll/thcoll.c (1.2), tests/test-thcoll.sh (1.2,
-	r0_1_1, r0_1_0), tests/thsort.c (1.2, r0_1_1, r0_1_0): Add $Id: ChangeLog,v 1.57 2003-09-10 07:13:08 thep Exp $
+	r0_1_1, r0_1_0), tests/thsort.c (1.2, r0_1_1, r0_1_0): Add $Id: ChangeLog,v 1.58 2004-01-24 16:08:17 thep Exp $
 
 2001-06-12 Tuesday 20:12  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
